// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page should render correctly 1`] = `
"<section><main class=\\"\\">test-value<style>
        main {
          font-size: calc(1 * 16px);
          width: 100%;
          height: 100%;
          padding: calc(3.125 * 16px) 0 calc(3.125 * 16px) 0;
          margin: 0 0 0 0;
        }
      </style></main><style>
        section {
          max-width: 100vw;
          min-height: 100vh;
          box-sizing: border-box;
          position: relative;
          font-size: calc(1 * 16px);
          width: calc(100% - 100pt);
          height: auto;
          padding: 0 calc(1.34 * 16px) 0 calc(1.34 * 16px);
          margin: 0 auto 0
            auto;
        }
      </style></section>"
`;

exports[`Page should work correctly with dot configs 1`] = `
"<section><main class=\\"\\"><style>
        main {
          font-size: calc(1 * 16px);
          width: 100%;
          height: 100%;
          padding: calc(3.125 * 16px) 0 calc(3.125 * 16px) 0;
          margin: 0 0 0 0;
        }
      </style></main><span><style>
        :global(body) {
          background-image: radial-gradient(#e3e3e3 20px, transparent 0),
            radial-gradient(#e3e3e3 20px, transparent 0);
          background-position: 0 0, calc(0.5 * 25px) calc(0.5 * 25px);
          background-attachment: fixed;
          background-size: calc(0.5 * 50px) calc(0.5 * 50px);
        }
      </style></span><style>
        section {
          max-width: 100vw;
          min-height: 100vh;
          box-sizing: border-box;
          position: relative;
          font-size: calc(1 * 16px);
          width: calc(100% - 100pt);
          height: auto;
          padding: 0 calc(1.34 * 16px) 0 calc(1.34 * 16px);
          margin: 0 auto 0
            auto;
        }
      </style></section>"
`;
